# trader

./: .dockerignore  .gitignore  Dockerfile  __init__.py  playground.ipynb  pyproject.toml  readme_and_tests.md  requirements.txt  setup.py
config/: backtest.yaml  base.yaml  coarse.yaml  fine.yaml  rerank.yaml  signals.yaml
notebooks/: coarse.ipynb  data_retrieval.ipynb
tests/: __init__.py
trader/: __main__.py  cli.py
trader/features/: __init__.py  pipelines.py  tech_indicators.py  timeseries_feats.py
trader/models/: __init__.py  predict.py  train_fine.py  train_rerank.py  train_signals.py
trader/stages/: __init__.py  backtest.py  coarse.py  fine.py  portfolio.py  rerank.py  signals.py
trader/utils/: __init__.py  dates.py  io.py  leakage_checks.py  metrics.py
