[tool.poetry]
name = "trader"
version = "0.1.0"
description = "Hierarchical stock selection and trading pipeline"
authors = ["Quant Team"]
readme = "README.md"
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.0"
numpy = "^1.24.0"
scikit-learn = "^1.3.0"
lightgbm = "^4.0.0"
xgboost = "^2.0.0"
statsmodels = "^0.14.0"
scipy = "^1.11.0"
ta = "^0.10.2"
tsfresh = "^0.20.0"
yfinance = "^0.2.28"
requests = "^2.31.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
typer = "^0.9.0"
rich = "^13.5.0"
mlflow = "^2.8.0"
joblib = "^1.3.0"
pyarrow = "^13.0.0"
tqdm = "^4.66.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.0"
ipykernel = "^6.25.0"
jupyter = "^1.0.0"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=trader --cov-report=term-missing --cov-report=html"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100